log
Fri Mar 27 05:46:48 PM UTC 2026: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|6
total_score: 0/60
9ede7f1
Fri Mar 27 05:50:22 PM UTC 2026: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
0e48c95
Fri Mar 27 05:52:39 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:81:20: error: ‘tail’ undeclared (first use in this function)
   81 |     if (current == tail)
      |                    ^~~~
list.c:81:20: note: each undeclared identifier is reported only once for each function it appears in
47f8346
Fri Mar 27 05:52:55 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
fa9a522
Fri Mar 27 05:54:21 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/60
e26e3d7
Fri Mar 27 05:54:52 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
ba89c06
Fri Mar 27 06:07:30 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/60
623cc63
Fri Mar 27 06:08:46 PM UTC 2026: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/60
d89113c
Fri Mar 27 09:03:04 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:6: error: expected expression before ‘List’
   38 |     *List newList = (List *)malloc(sizeof(List));
      |      ^~~~
list.c:39:5: error: ‘newList’ undeclared (first use in this function); did you mean ‘nextList’?
   39 |     newList->head = NULL;
      |     ^~~~~~~
      |     nextList
list.c:39:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
3066521
Fri Mar 27 09:03:25 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
7fe5026
Fri Mar 27 09:05:29 PM UTC 2026: 
 tests:  2|4
total_score: 20/60
e6f2f79
Fri Mar 27 09:06:20 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:6: error: expected expression before ‘List’
   38 |     *List newList = (List *)malloc(sizeof(List));
      |      ^~~~
list.c:39:5: error: ‘newList’ undeclared (first use in this function); did you mean ‘nextList’?
   39 |     newList->head = NULL;
      |     ^~~~~~~
      |     nextList
list.c:39:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
   44 | }
      | ^
cc1: all warnings being treated as errors
1b7c3e2
Fri Mar 27 09:06:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
617896e
